<resources>
    <string name="app_name">CarSpends</string>
    <string name="title_activity_bottom_nav_menu">BottomNavMenuActivity</string>
    <string name="settings_file_name">inside_settings</string>
    <string name="notification_channel_download">Download notifications</string>
    <string name="notification_channel_download_description">Channel for download notifications</string>
    <string name="text_resource">Ресурс:</string>
    <string name="text_detail_resource">Ресурс детали</string>
    <string name="text_extra">Прочее</string>
    <string name="text_repair">Ремонт, запчасти</string>
    <string name="text_refill">Заправка</string>
    <string name="text_main_info">Основная инфомрация</string>
    <string name="text_settings">Настройки</string>
    <string name="text_statistics">Статистика</string>
    <string name="text_avg_fuel">Средний расход</string>
    <string name="text_moment_fuel">Моментальный расход</string>
    <string name="text_all_fuel">Всего залито</string>
    <string name="text_all_fuel_graph">Залито топлива</string>
    <string name="text_all_fuel_price">Потрачено на бензин</string>
    <string name="text_mileage_price">Стоимость километра</string>
    <string name="text_all_price">Потрачено всего</string>
    <string name="text_all_price_graph">Расходы</string>
    <string name="text_all_price_without_fuel">Расходы (без топлива)</string>
    <string name="text_all_mileage">Общий пробег</string>
    <string name="text_all_mileage_graph">Пробег</string>
    <string name="text_empty_note_or_component">Здесь появятся записи, когда Вы их добавите (:</string>
    <string name="text_not_enough_info">Недостаточно информации для предоставления статистики</string>
    <string name="text_font_size">Размер шрифта</string>
    <string name="text_font_size_large">Увеличенный шрифт</string>
    <string name="text_statistics_one">Быстрая статистика (1)</string>
    <string name="text_statistics_two">Быстрая статистика (2)</string>
    <string name="text_unnamed">- без названия -</string>
    <string name="text_measure_mileage_unit">км</string>
    <string name="text_measure_mileage_unit_for_formatting">%s км</string>
    <string name="text_measure_power_unit">л.с.</string>
    <string name="text_measure_power_unit_for_formatting">%s л.с.</string>
    <string name="text_measure_engine_capacity_unit">л</string>
    <string name="text_measure_engine_capacity_unit_for_formatting">%s л</string>
    <string name="text_measure_gas_volume_unit">л</string>
    <string name="text_measure_gas_volume_unit_for_formatting">%s л</string>
    <string name="text_measure_gas_charge">л/100км</string>
    <string name="text_measure_gas_charge_for_formatting">%s л/100км</string>
    <string name="text_measure_price_charge">₽/км</string>
    <string name="text_measure_price_charge_for_formatting">%s ₽/км</string>
    <string name="text_measure_currency">₽</string>
    <string name="text_measure_currency_for_formatting">%s ₽</string>
    <string name="text_version_for_settings">Release 1.2</string>
    <string name="button_apply">Принять</string>
    <string name="button_deny">Отмена</string>
    <string name="button_download_db">Сохранить записи</string>
    <string name="button_restore_data">Сбросить данные</string>
    <string name="button_delete">Удалить</string>
    <string name="button_drop">Сбросить</string>
    <string name="dialog_delete_title">Удалить</string>
    <string name="dialog_permission_title">Разрешение</string>
    <string name="dialog_exit_title">Выйти</string>
    <string name="dialog_delete_note">Точно хотите удалить запись «%s»?</string>
    <string name="dialog_delete_component">Точно хотите удалить ресурс «%s»?</string>
    <string name="dialog_delete_picture">Точно хотите удалить изображение «%s»?</string>
    <string name="dialog_exit_car">Точно хотите выйти из приложения? Несохранённые данные будут потеряны.</string>
    <string name="dialog_permission_denied">Без разрешения Вы не сможете пользоваться некоторым функционалом приложения.</string>
    <string name="dialog_drop_car_title">Сбросить автомобиль</string>
    <string name="dialog_drop_car">Удалить автомобиль вместе со всеми данными (статистика, компоненты и записи) или очистить только записи?</string>
    <string name="dialog_delete_car_title">Удалить автомобиль</string>
    <string name="dialog_delete_car">При удалении автомобиля восстановить информацию будет невозможно. Вы уверены, что хотите сделать это?</string>
    <string name="dialog_delete_car_info_title">Сбросить записи</string>
    <string name="dialog_delete_car_info">При сбросе записей восстановить информацию будет невозможно. Вы уверены, что хотите сделать это?</string>
    <string name="dialog_select_item_title">Выберите один из вариантов</string>
    <string name="dialog_positive">Принять</string>
    <string name="dialog_negative">Отмена</string>
    <string name="dialog_neutral">Ок</string>
    <string name="dialog_info_title">Справка</string>
    <string name="dialog_info_statistics">Поля «быстрой статистики» находятся на главном экране
        приложения и позволяют Вам быстро просматривать информацию об автомобиле.\n
        Вы можете выбрать какую статистику отображать и менять поля в любое время</string>
    <string name="dialog_low_component_title">Низкий ресурс</string>
    <string name="dialog_low_component">У компонента «%s» низкий остаточный ресурс - %s%% (%sкм)!</string>
    <string name="dialog_restore_component_title">Обновить ресурс</string>
    <string name="dialog_restore_component">Обновить компонент «%s» на текущий пробег автомобиля?</string>
    <string name="toast_missing_data">Заполните все поля</string>
    <string name="toast_components_loading_error">Ошибка при загрузке компонентов</string>
    <string name="toast_cars_loading_error">Ошибка при загрузке автомобилей</string>
    <string name="toast_notes_loading_error">Ошибка при загрузке записей</string>
    <string name="toast_pictures_max_size">Нельзя прикрепить более 4 изображений</string>
    <string name="toast_db_saver_load_error">Ошибка при загрузке файла</string>
    <string name="toast_db_saver_save_error">Ошибка при сохранении файла</string>
    <string name="toast_db_saver_load_completed">Загрузка завершена</string>
    <string name="toast_db_saver_load_start">Загрузка началась\nПодробнее в оповещении</string>
    <string name="notification_download_title">Загрузка</string>
    <string name="notification_download_success">Файл загружен (нажмите для просмотра)</string>
    <string name="notification_download_in_process">Файл загружается</string>
    <string name="notification_download_error">Ошибка при загрузке</string>
    <string name="hint_works_name">Название работы</string>
    <string name="hint_total_price">Сумма</string>
    <string name="hint_name_detail">Название детали</string>
    <string name="hint_name_repair">Наименование работ</string>
    <string name="hint_detail_resource">Ресурс детали</string>
    <string name="hint_replace_mileage">Заменён на пробеге</string>
    <string name="hint_work_mileage">Произведено на пробеге</string>
    <string name="hint_fuel_liters">Количество</string>
    <string name="hint_fuel_total_price">Сумма</string>
    <string name="hint_fuel_price">р/л</string>
    <string name="hint_car_name">Название автомобиля</string>
    <string name="hint_car_mileage">Текущий пробег</string>
    <string name="hint_car_engine_volume">Объём двигателя</string>
    <string name="hint_car_power">Мощность</string>
    <string name="blank_validation">Недопустимое количество пробелов</string>
    <string name="inappropriate_empty_title">Пустой заголовок</string>
    <string name="inappropriate_empty_amount">Пустая сумма</string>
    <string name="inappropriate_empty_mileage">Пустой пробег</string>
    <string name="inappropriate_empty_volume">Пустой объем</string>
    <string name="inappropriate_empty_price">Пустая цена</string>
    <string name="inappropriate_empty_resource">Пустой ресурс</string>
    <string name="inappropriate_empty_power">Пустая мощность</string>
    <string name="inappropriate_empty_engine_capacity">Пустой объем двигател</string>
    <string name="menu_home">Главная</string>
    <string name="menu_resources">Ресурс</string>
    <string name="menu_statistics">Статистика</string>
    <string name="top_menu_numerous">Стандарт</string>
    <string name="top_menu_graphic">Графики</string>
    <string name="description_add_new_note">Добавить новую запись</string>
    <string name="description_set_date">Установить временные рамки</string>
    <string name="description_add_new_note_extra">Добавить новую запись, категория «прочее»</string>
    <string name="description_add_new_note_repair">Добавить новую запись, категория «ремонт»</string>
    <string name="description_add_new_note_filling">Добавить новую запись, категория «заправка»</string>
    <string name="description_img_car_menu">Иконка «настройки приложения»</string>
    <string name="description_img_tools">Иконка «тип записи»</string>
    <string name="description_img_choose_date">Иконка выбора даты</string>
    <string name="description_img_currency">Иконка валюты</string>
    <string name="description_internal_picture">Добавленное из галереи изображение</string>
    <string name="description_internal_picture_delete">Кнопка удаления добавленного из галереи изображения</string>
    <string name="description_internal_picture_add">Кнопка добавления изображений из галереи</string>
    <string name="description_note_has_pictures">Note has saved images</string>
    <string name="F92">АИ-92</string>
    <string name="F95">АИ-95</string>
    <string name="F98">АИ-98</string>
    <string name="F100">АИ-100</string>
    <string name="DT">Дизель</string>
    <string name="GAS">Газ</string>
    <string name="Electricity">Электричество</string>
    <string-array name="note_type_values">
        <item>Все записи</item>
        <item>Заправка</item>
        <item>Ремонт</item>
        <item>Прочее</item>
    </string-array>
    <string-array name="date_values">
        <item>Всё время</item>
        <item>За год</item>
        <item>За месяц</item>
        <item>За неделю</item>
    </string-array>
    <string name="date_week">За неделю</string>
    <string name="date_month">За месяц</string>
    <string name="date_year">За год</string>
    <string name="date_all_time">За всё время</string>
    <string-array name="fuel_values">
        <item>АИ-92</item>
        <item>АИ-95</item>
        <item>АИ-98</item>
        <item>АИ-100</item>
        <item>ДТ</item>
        <item>Газ</item>
        <item>Электричество</item>
    </string-array>
    <string-array name="statistic_values">
        <item>Средний расход</item>
        <item>Моментальный расход</item>
        <item>Всего литров залито</item>
        <item>Потрачено на бензин</item>
        <item>Стоимость километра</item>
        <item>Потрачено всего</item>
        <item>Общий пробег</item>
    </string-array>
    <string name="pick_images">Выбрать изображение</string>
    <string name="monday">ПН</string>
    <string name="tuesday">ВТ</string>
    <string name="wednesday">СР</string>
    <string name="thursday">ЧТ</string>
    <string name="friday">ПТ</string>
    <string name="saturday">СБ</string>
    <string name="sunday">ВС</string>
    <string name="x_axis_title">{%Value}{groupsSeparator: }\₽</string>
    <string name="tip_car_title_description">На главном экране отображается название Вашего
        автомобиля\nНажмите на него, чтобы изменить данные об автомобиле: название, текущий пробег,
        мощность и объём двигателя, а также чтобы перенести базу данных на другое устройство (:</string>
    <string name="tip_statistics_1_description">Вам всегда доступны два поля статистики для быстрого
        просмотра на главном экране\nПо стандарту первое поле - моментальный расход (с последней
        заправки), второе поле - стоимость километра эксплуатации автомобиля (:</string>
</resources>