<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/neaef_tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_extra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        style="@style/entryTitleText"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/neaef_til_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/neaef_tv_title"

        android:layout_margin="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/neaef_tiet_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_works_name"

            style="@style/inputText"
            android:inputType="textCapSentences"
            tools:text="Покупка дисков"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/neaef_amount_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/neaef_til_name"

        android:layout_margin="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/neaef_til_amount_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/neaef_tv_amount_unit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/neaef_tiet_amount_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_amount"
                android:inputType="numberDecimal"

                style="@style/inputText"
                tools:text="20.000"/>

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/neaef_tv_amount_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/neaef_til_amount_value"

            android:layout_margin="8dp"
            app:srcCompat="@drawable/ic_baseline_currency_ruble_24"
            android:contentDescription="@string/description_img_currency"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/neaef_date_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/neaef_amount_layout"

        android:layout_margin="10dp">

        <TextView
            android:id="@+id/neaef_tv_date_value"
            style="@style/dateText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/neaef_iv_calendar"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="17.06.2021" />

        <ImageView
            android:id="@+id/neaef_iv_calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/neaef_tv_date_value"

            android:layout_margin="8dp"
            app:srcCompat="@drawable/ic_baseline_edit_calendar_24"
            android:contentDescription="@string/description_img_choose_date" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/neaef_button_apply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        style="@style/acceptButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>