<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/caref_tv_title"
        style="@style/entryTitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_main_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/caref_button_apply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caref_tv_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/caref_til_car_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                style="@style/inputTextLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/caref_tiet_car_name"
                    style="@style/inputText"
                    android:inputType="textCapSentences"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/hint_car_name"
                    tools:text="Chevrolet Lacetti" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/caref_mileage_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@+id/caref_til_car_name">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/caref_til_mileage_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toStartOf="@+id/caref_tv_mileage_unit"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"

                    app:layout_constraintHorizontal_weight="8"
                    style="@style/inputTextLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/caref_tiet_mileage_value"
                        style="@style/inputText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_car_mileage"

                        android:inputType="number"
                        tools:text="132.333" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/caref_tv_mileage_unit"
                    style="@style/entryUnitText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_measure_mileage_unit"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/caref_til_mileage_value"
                    app:layout_constraintTop_toTopOf="parent"

                    app:layout_constraintHorizontal_weight="1"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/caref_engine_capacity_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@+id/caref_mileage_layout">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/caref_til_engine_capacity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toStartOf="@+id/caref_tv_engine_capacity"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"

                    app:layout_constraintHorizontal_weight="8"
                    style="@style/inputTextLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/caref_tiet_engine_capacity"
                        style="@style/inputText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_car_engine_capacity"

                        android:inputType="numberDecimal"
                        tools:text="1.6" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/caref_tv_engine_capacity"
                    style="@style/entryUnitText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_measure_engine_capacity_unit"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/caref_til_engine_capacity"

                    app:layout_constraintTop_toTopOf="parent"

                    app:layout_constraintHorizontal_weight="1"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/caref_power_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@+id/caref_engine_capacity_layout">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/caref_til_power"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toStartOf="@+id/caref_tv_power"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"

                    app:layout_constraintHorizontal_weight="8"
                    style="@style/inputTextLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/caref_tiet_power"
                        style="@style/inputText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_car_power"

                        android:inputType="number"
                        tools:text="121" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/caref_tv_power"

                    style="@style/entryUnitText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_measure_power_unit"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/caref_til_power"

                    app:layout_constraintTop_toTopOf="parent"

                    app:layout_constraintHorizontal_weight="1"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/caref_button_apply"
        style="@style/acceptButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
